--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -39,7 +39,7 @@ a {
   pointer-events: auto;
 }
 
-li {
+/*li {
   transition: transform 0.5s;
   pointer-events: none;
 }
@@ -51,7 +51,7 @@ li:hover {
 a:hover {
   color: blue;
 }
-
+*/
 p {
   font-size: 1.2rem;
 }
