--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,10 @@ nav ul li a {
   padding: 1.5vh 2rem;
 }
 
+nav ul li a:hover {
+  color: white;
+}
+
 #linje {
   width: 95vw;
   height: 1px;
@@ -50,6 +54,7 @@ h1 {
 h2 {
   width: 65vw;
   font-size: 5vh;
+  margin-bottom: 35vh;
 }
 
 h4 {
@@ -67,6 +72,12 @@ h5 {
   color: #013321;
   font-size: 6vh;
   margin: 10vh 4vh;
+}
+
+h6 {
+  font-size: 2rem;
+  color: #013321;
+  margin: 2rem;
 }
 
 th {
@@ -100,12 +111,6 @@ iframe {
   height: 40vh;
 }
 
-img {
-  width: auto;
-  height: 25vh;
-  margin: 0 auto;
-}
-
 .banner,
 .banner_center,
 .banner_center_sub {
@@ -135,7 +140,6 @@ img {
 }
 
 .textbox {
-  border: 1px solid #013321;
   padding: 1rem;
   margin: 0.5rem;
   width: 70ch;
@@ -149,7 +153,7 @@ footer {
 
 .queries,
 .video_container,
-.read_container {
+.read_container, .tutorial_container {
   display: -ms-grid;
   display: grid;
   width: 80vw;
@@ -224,6 +228,65 @@ footer {
   margin: 0 1rem;
 }
 
+.tutorial_container > li, #login > a {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+  margin-bottom: 4rem;
+  padding: 1rem;
+}
+
+#login > a {
+  display: -ms-grid;
+  display: grid;
+  width: 80vw;
+  margin: 3vh auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tutorial_container > p {
+  margin: 0 auto;
+  font-size: 2rem;
+}
+
+.tutorial_container > a {
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 1rem auto;
+  text-decoration: underline;
+}
+
+.tutorial_container > li > * {
+  margin: 0 1rem;
+  font-size: 2rem;
+}
+
+.tutorial_container > li > img {
+  place-self: left;
+  height: auto;
+  width: 30vw;
+}
+
+#login > a > p {
+  font-size: 2rem;
+}
+
+#velgbank {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  place-items: center;
+}
+
+#velgbank > a > img {
+  width: 20vw;
+  height: auto;
+}
+
 *,
 *:before,
 *:after {
@@ -269,23 +332,19 @@ a {
   pointer-events: auto;
 }
 
-li {
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
+/*li {
   transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
   pointer-events: none;
 }
 
 li:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 a:hover {
   color: blue;
 }
-
+*/
 p {
   font-size: 1.2rem;
 }
