--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -139,11 +139,9 @@ iframe {
   width: 70ch;
 }
 
-#namelist{
+#namelist {
   font-size: 1.2rem;
 }
-
-
 
 .queries,
 .video_container,
@@ -243,6 +241,7 @@ iframe {
   width: auto;
   max-height: 70vh;
   max-width: 35vw;
+  min-width: 12vw;
 }
 
 #login > a > p {
@@ -256,30 +255,28 @@ iframe {
   place-items: center;
 }
 
-
 #bildevalg > a > img {
   width: 20vw;
   height: auto;
   margin-top: 5rem;
 }
 
-
-address > a{
+address > a {
   text-decoration: underline;
 }
 
-
-address,address > a,#footnav > li > a{
+address,
+address > a,
+#footnav > li > a {
   color: white;
   font-size: 1.2rem;
 }
 
-
-address,#footnav{
+address,
+#footnav {
   padding: 2rem;
   width: 40vw;
 }
-
 
 footer {
   background-color: $green;
@@ -288,8 +285,7 @@ footer {
   grid-template-columns: 1fr 1fr;
 }
 
-
-footer > div{
+footer > div {
   justify-self: end;
   text-align: center;
 }
