--- a/styles/style.css
+++ b/styles/style.css
@@ -270,6 +270,7 @@ iframe {
   width: auto;
   max-height: 70vh;
   max-width: 35vw;
+  min-width: 12vw;
 }
 
 #login > a > p {
@@ -295,12 +296,15 @@ address > a {
   text-decoration: underline;
 }
 
-address, address > a, #footnav > li > a {
+address,
+address > a,
+#footnav > li > a {
   color: white;
   font-size: 1.2rem;
 }
 
-address, #footnav {
+address,
+#footnav {
   padding: 2rem;
   width: 40vw;
 }
