--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,4 +1,5 @@
-$green: #013321;
+$green: #02639b;
 $background: #c7b299;
 $white: white;
-$subtitle: #534741;
+$subtitle: #00456d;
+$lightgreen: #003b5d;
