--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -2,6 +2,7 @@ nav {
   width: 90vw;
   margin: 0 auto;
   display: grid;
+  
 
   ul {
     list-style: none;
@@ -11,15 +12,21 @@ nav {
     height: 10vh;
 
     li {
+      margin-top: 2rem;
+
       a {
         text-decoration: none;
         background-color: $green;
         color: $white;
-        font-size: 4vh;
+        font-size: 6vh;
         padding: 1.5vh 2rem;
+        border: solid 3px #00507F;
       }
       a:hover {
-        color: white;
+        background-color: whitesmoke;
+        color: black;
+        transition: 0.3s;
+        border: solid 3px #00507F;
       }
     }
   }
@@ -29,7 +36,9 @@ nav {
   width: 95vw;
   height: 1px;
   background-color: grey;
-  margin: 2vh auto;
+  margin: 5vh auto;
+  
+
 }
 
 h1,
@@ -227,7 +236,6 @@ iframe {
   font-size: 1.5rem;
   text-align: center;
   margin: 1rem auto;
-  text-decoration: underline;
 }
 
 .tutorial_container > li > * {
@@ -259,6 +267,9 @@ iframe {
   width: 20vw;
   height: auto;
   margin-top: 5rem;
+  border: 2px solid black;
+  padding: 1rem;
+  background-color: white;
 }
 
 address > a {
@@ -289,3 +300,140 @@ footer > div {
   justify-self: end;
   text-align: center;
 }
+
+
+
+
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+  height: auto;
+  width: 50vw;
+  margin: 0 auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+  background-color: $green;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 16px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.button{
+  border: 2px solid black;
+  padding: 1rem 5rem;
+  border-radius: 50px;
+  background-color: $lightgreen;
+  color: whitesmoke;
+}
+
+.spsm{
+  background-color: $lightgreen;
+  color: whitesmoke;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.spsm:hover{
+  padding: 1rem 2rem;
+  transition: .5s;
+  font-size: 1.5rem;}
+
+  th {
+    background-color: #00507F;
+    color: whitesmoke;
+    font-size: 2rem;
+    text-align: left;
+    padding: 1rem;
+
+  }
+  
+  td {
+    color: #00507F;
+    background-color: white;
+    font-size: 1.5rem;
+    padding-top: 1.5rem;
+    margin-left: 0;
+    margin-right: 1rem;
+    padding: 1rem;
+  }
+
+  table {
+    margin-left: 1rem;
+
+  }
+
+
