--- a/styles/style.css
+++ b/styles/style.css
@@ -19,30 +19,39 @@ nav ul {
   height: 10vh;
 }
 
+nav ul li {
+  margin-top: 2rem;
+}
+
 nav ul li a {
   text-decoration: none;
-  background-color: #013321;
+  background-color: #02639b;
   color: white;
-  font-size: 4vh;
+  font-size: 6vh;
   padding: 1.5vh 2rem;
+  border: solid 3px #00507F;
 }
 
 nav ul li a:hover {
-  color: white;
+  background-color: whitesmoke;
+  color: black;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border: solid 3px #00507F;
 }
 
 #linje {
   width: 95vw;
   height: 1px;
   background-color: grey;
-  margin: 2vh auto;
+  margin: 5vh auto;
 }
 
 h1,
 h2,
 #scroll {
   margin: 5vh auto;
-  color: #013321;
+  color: #02639b;
   text-align: center;
 }
 
@@ -59,7 +68,7 @@ h2 {
 
 h4 {
   width: 40vw;
-  background-color: #534741;
+  background-color: #00456d;
   margin: 0 auto;
   color: white;
   text-align: center;
@@ -69,24 +78,24 @@ h4 {
 }
 
 h5 {
-  color: #013321;
+  color: #02639b;
   font-size: 6vh;
   margin: 10vh 4vh;
 }
 
 h6 {
   font-size: 2rem;
-  color: #013321;
+  color: #02639b;
   margin: 2rem;
 }
 
 th {
-  color: #013321;
+  color: #02639b;
   font-size: 2rem;
 }
 
 td {
-  color: #013321;
+  color: #02639b;
   font-size: 1.5rem;
   padding: 1rem;
 }
@@ -115,7 +124,7 @@ iframe {
 .banner_center,
 .banner_center_sub {
   color: white;
-  background-color: #013321;
+  background-color: #02639b;
   width: 70vw;
   padding: 1rem 2rem;
 }
@@ -256,7 +265,6 @@ iframe {
   font-size: 1.5rem;
   text-align: center;
   margin: 1rem auto;
-  text-decoration: underline;
 }
 
 .tutorial_container > li > * {
@@ -290,6 +298,9 @@ iframe {
   width: 20vw;
   height: auto;
   margin-top: 5rem;
+  border: 2px solid black;
+  padding: 1rem;
+  background-color: white;
 }
 
 address > a {
@@ -310,7 +321,7 @@ address,
 }
 
 footer {
-  background-color: #013321;
+  background-color: #02639b;
   margin-top: 5rem;
   display: -ms-grid;
   display: grid;
@@ -322,6 +333,140 @@ footer > div {
   -ms-grid-column-align: end;
       justify-self: end;
   text-align: center;
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+  height: auto;
+  width: 50vw;
+  margin: 0 auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  background-color: #02639b;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 16px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+  border: 2px solid black;
+}
+
+.button {
+  border: 2px solid black;
+  padding: 1rem 5rem;
+  border-radius: 50px;
+  background-color: #003b5d;
+  color: whitesmoke;
+}
+
+.spsm {
+  background-color: #003b5d;
+  color: whitesmoke;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.spsm:hover {
+  padding: 1rem 2rem;
+  -webkit-transition: .5s;
+  transition: .5s;
+  font-size: 1.5rem;
+}
+
+th {
+  background-color: #00507F;
+  color: whitesmoke;
+  font-size: 2rem;
+  text-align: left;
+  padding: 1rem;
+}
+
+td {
+  color: #00507F;
+  background-color: white;
+  font-size: 1.5rem;
+  padding-top: 1.5rem;
+  margin-left: 0;
+  margin-right: 1rem;
+  padding: 1rem;
+}
+
+table {
+  margin-left: 1rem;
 }
 
 *,
@@ -343,6 +488,8 @@ footer > div {
      -moz-text-size-adjust: none;
       -ms-text-size-adjust: none;
           text-size-adjust: none;
+  scroll-behavior: smooth;
+  font-family: 'Open Sans';
 }
 
 header,
@@ -354,6 +501,7 @@ main {
 
 body {
   line-height: 1;
+  background-color: #f4f4f4;
 }
 
 ol,
@@ -367,11 +515,18 @@ a {
   color: black;
 }
 
-a:hover, #footnav > li > a:hover {
+#footnav > li > a:hover {
   color: blue;
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Open Sans Light"), local("OpenSans-Light"), url(https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTXhCUOGz7vYGh680lGh-uXM.woff) format("woff");
 }
 /*# sourceMappingURL=style.css.map */
