--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -2,7 +2,6 @@ nav {
   width: 90vw;
   margin: 0 auto;
   display: grid;
-  
 
   ul {
     list-style: none;
@@ -20,13 +19,13 @@ nav {
         color: $white;
         font-size: 6vh;
         padding: 1.5vh 2rem;
-        border: solid 3px #00507F;
+        border: solid 3px #00507f;
       }
       a:hover {
         background-color: whitesmoke;
         color: black;
         transition: 0.3s;
-        border: solid 3px #00507F;
+        border: solid 3px #00507f;
       }
     }
   }
@@ -37,8 +36,6 @@ nav {
   height: 1px;
   background-color: grey;
   margin: 5vh auto;
-  
-
 }
 
 h1,
@@ -301,15 +298,23 @@ footer > div {
   text-align: center;
 }
 
-
-
-
 /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
+  //max-height: 60vh;
   height: auto;
   width: 50vw;
   margin: 0 auto;
+}
+
+.app {
+  max-height: 80vh;
+}
+
+.app div img {
+  max-height: 60vh;
+  width: auto;
+  padding: 0 30%;
 }
 
 /* Hide the images by default */
@@ -354,8 +359,8 @@ footer > div {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color: #000000;
+  font-size: 2rem;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -367,6 +372,7 @@ footer > div {
   background-color: #222;
   padding: 16px 16px;
   color: white;
+  min-height: 100px;
 }
 
 .row:after {
@@ -378,7 +384,10 @@ footer > div {
 /* Six columns side by side */
 .column {
   float: left;
-  width: 25%;
+}
+
+.column img {
+  aspect-ratio: 3 / 2;
 }
 
 /* Add a transparency effect for thumnbail images */
@@ -392,7 +401,7 @@ footer > div {
   border: 2px solid black;
 }
 
-.button{
+.button {
   border: 2px solid black;
   padding: 1rem 5rem;
   border-radius: 50px;
@@ -400,40 +409,37 @@ footer > div {
   color: whitesmoke;
 }
 
-.spsm{
+.spsm {
   background-color: $lightgreen;
   color: whitesmoke;
   padding: 1rem;
   border-radius: 10px;
 }
 
-.spsm:hover{
+.spsm:hover {
   padding: 1rem 2rem;
-  transition: .5s;
-  font-size: 1.5rem;}
+  transition: 0.5s;
+  font-size: 1.5rem;
+}
 
-  th {
-    background-color: #00507F;
-    color: whitesmoke;
-    font-size: 2rem;
-    text-align: left;
-    padding: 1rem;
+th {
+  background-color: #00507f;
+  color: whitesmoke;
+  font-size: 2rem;
+  text-align: left;
+  padding: 1rem;
+}
 
-  }
-  
-  td {
-    color: #00507F;
-    background-color: white;
-    font-size: 1.5rem;
-    padding-top: 1.5rem;
-    margin-left: 0;
-    margin-right: 1rem;
-    padding: 1rem;
-  }
+td {
+  color: #00507f;
+  background-color: white;
+  font-size: 1.5rem;
+  padding-top: 1.5rem;
+  margin-left: 0;
+  margin-right: 1rem;
+  padding: 1rem;
+}
 
-  table {
-    margin-left: 1rem;
-
-  }
-
-
+table {
+  margin-left: 1rem;
+}
