--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ nav ul li a {
   color: white;
   font-size: 6vh;
   padding: 1.5vh 2rem;
-  border: solid 3px #00507F;
+  border: solid 3px #00507f;
 }
 
 nav ul li a:hover {
@@ -37,7 +37,7 @@ nav ul li a:hover {
   color: black;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  border: solid 3px #00507F;
+  border: solid 3px #00507f;
 }
 
 #linje {
@@ -343,6 +343,16 @@ footer > div {
   margin: 0 auto;
 }
 
+.app {
+  max-height: 80vh;
+}
+
+.app div img {
+  max-height: 60vh;
+  width: auto;
+  padding: 0 30%;
+}
+
 /* Hide the images by default */
 .mySlides {
   display: none;
@@ -387,8 +397,8 @@ footer > div {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color: #000000;
+  font-size: 2rem;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -400,6 +410,7 @@ footer > div {
   background-color: #222;
   padding: 16px 16px;
   color: white;
+  min-height: 100px;
 }
 
 .row:after {
@@ -411,7 +422,10 @@ footer > div {
 /* Six columns side by side */
 .column {
   float: left;
-  width: 25%;
+}
+
+.column img {
+  aspect-ratio: 3 / 2;
 }
 
 /* Add a transparency effect for thumnbail images */
@@ -442,13 +456,13 @@ footer > div {
 
 .spsm:hover {
   padding: 1rem 2rem;
-  -webkit-transition: .5s;
-  transition: .5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   font-size: 1.5rem;
 }
 
 th {
-  background-color: #00507F;
+  background-color: #00507f;
   color: whitesmoke;
   font-size: 2rem;
   text-align: left;
@@ -456,7 +470,7 @@ th {
 }
 
 td {
-  color: #00507F;
+  color: #00507f;
   background-color: white;
   font-size: 1.5rem;
   padding-top: 1.5rem;
